feat(catalog): add geometry validation endpoint